# usgs_earthquake

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
earthquake_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
earthquakes/: models.py  serializers.py  tasks.py  utils.py  views.py
earthquakes/migrations/: 0001_initial.py  0002_alter_city_name_alter_city_unique_together_and_more.py
frontend/: package.json  vue.config.js
frontend/src/components/: Home.vue
frontend/src/router/: index.js
static/: README
