[tool.poetry]
name = "usgs_earthquake"
version = "0.1.0"
description = "This system utilizes the USGS Earthquake public dataset to determine the nearest earthquake above a magnitude of 5.0 concerning specific cities within user-defined date ranges."
authors = ["Edimar Calebe Castanho <contato@calebe.dev.br>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Calebe94/usgs_earthquake"
repository = "https://github.com/Calebe94/usgs_earthquake"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.0,<5.0"
psycopg2-binary = ">=2.9"
djangorestframework = "==3.15.2"
uvicorn = ">=0.22.0"
dj-database-url = "==2.2.0"
python-dotenv = ">=0.21"
geopy = "*"
httpx = "*"
asgiref = "*"
adrf = "*"
celery = {version = "==5.2.7", extras = ["redis"]}
redis = ">=4.5.0"
kombu = ">=5.2.0"
django-redis = "*"
django-cors-headers = ">=4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
manage = "django.core.management:execute_from_command_line"
